# fm8_hud

./: .gitignore  Cargo.toml  README.md  car_config.json
.github/workflows/: rust.yml
src/: config.rs  enums.rs  main.rs  uitl.rs
src/controllers/: mod.rs  test_sender.rs  udp.rs
src/ui/: dash.rs  index.rs  lap_history.rs  mod.rs  other_logic.rs  sector.rs  setting.rs
