[package]
name = "fm8_hud"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
rand = "0.8.5"
tokio = { version = "1.43.0", features = ["macros",  "io-util","rt","time", "rt-multi-thread"] }
tokio-macros = "2.5.0"
utf8_slice = "1.0.0"
warp = { version = "0.3.7", features = ["default"] }
winapi = { version = "0.3.9", features = ["winuser", "windef", "ntdef","winbase"] }
reqwest = { version = "0.12.12", features = ["json","multipart","stream"] }
serde_json = { version = "1.0.139", features = ["default"] }
serde = { version = "1.0.218", features = ["derive"] }
futures = "0.3.31"
user32-sys = "0.2.0"
rsautogui = "0.2.2"
screenshots = "0.8.10"
mime_guess = "2.0.5"
percent-encoding = "2.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
enigo = "0.3.0"
eframe = { version = "0.31.1", features = ["default","persistence"] }
env_logger = "0.11.8"
rdev = "0.5.3"
global-hotkey= { git = "https://github.com/tauri-apps/global-hotkey", branch = "renovate/eframe-0.x" }
# global-hotkey = "0.7.0"
