[package]
name = "fm8_hud"
version = "0.1.52"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.39"
rand = "0.8.5"
tokio = { version = "1.43.0", features = ["macros",  "io-util","rt","time", "rt-multi-thread"] }
tokio-macros = "2.5.0"
utf8_slice = "1.0.0"
warp = { version = "0.3.7", features = ["default"] }
winapi = { version = "0.3.9", features = ["winuser", "windef", "ntdef","winbase"] }
reqwest = { version = "0.12.12", features = ["json","multipart","stream"] }
serde_json = { version = "1.0.139", features = ["default"] }
serde = { version = "1.0.218", features = ["derive"] }
futures = "0.3.31"
user32-sys = "0.2.0"
rsautogui = "0.2.2"
screenshots = "0.8.10"
mime_guess = "2.0.5"
percent-encoding = "2.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
enigo = "0.3.0"
env_logger = "0.11.8"
rdev = "0.5.3"
eframe = { version = "0.31.1", features = ["persistence", "serde","wgpu","glow"] }
bincode = "2.0.1"
egui-toast = "0.17.0"
image = "0.25.6"
